crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_arrays_and_objects.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
local arr = {1, 2, 3, 4, 5}
local obj = {name = "John", age = 30, active = true}
local nested = {data = {1, 2}, meta = {version = 1}}
