crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_arrow_function.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
local add = function(a, b)
    return (a + b)
end
local multiply = function(x, y)
    return (x * y)
end
