crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_bitwise_lua51.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
-- Bitwise operation helpers for Lua 5.1
local function _bit_band(a, b)
    local result = 0
    local bitval = 1
    while a > 0 and b > 0 do
        if a % 2 == 1 and b % 2 == 1 then
            result = result + bitval
        end
        bitval = bitval * 2
        a = math.floor(a / 2)
        b = math.floor(b / 2)
    end
    return result
end

local function _bit_bor(a, b)
    local result = 0
    local bitval = 1
    while a > 0 or b > 0 do
        if a % 2 == 1 or b % 2 == 1 then
            result = result + bitval
        end
        bitval = bitval * 2
        a = math.floor(a / 2)
        b = math.floor(b / 2)
    end
    return result
end

local function _bit_bxor(a, b)
    local result = 0
    local bitval = 1
    while a > 0 or b > 0 do
        if (a % 2) ~= (b % 2) then
            result = result + bitval
        end
        bitval = bitval * 2
        a = math.floor(a / 2)
        b = math.floor(b / 2)
    end
    return result
end

local function _bit_bnot(a)
    local result = 0
    local bitval = 1
    for i = 0, 31 do
        if a % 2 == 0 then
            result = result + bitval
        end
        bitval = bitval * 2
        a = math.floor(a / 2)
    end
    return result
end

local function _bit_lshift(a, b)
    return math.floor(a) * (2 ^ b)
end

local function _bit_rshift(a, b)
    return math.floor(math.floor(a) / (2 ^ b))
end


local a = _bit_band(x, y)
local b = _bit_bor(x, y)
local c = _bit_bxor(x, y)
local d = _bit_lshift(x, 2)
local e = _bit_rshift(x, 3)
local f = math.floor(x / y)
