crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_bitwise_lua53.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
local a = (x & y)
local b = (x | y)
local c = (x ~ y)
local d = (x << 2)
local e = (x >> 3)
local f = (x // y)
