crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_complex_expressions.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
local result = ((((a + b)) * ((c - d))) / e)
local comparison = ((x >= y) and (z < w))
local ternary = (condition and value1 or value2)
