crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_control_flow.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
if (x > 0) then
    print("positive")
elseif (x < 0) then
    print("negative")
else
    print("zero")
end
while (count < 10) do
    count = (count + 1)
end
for i = 1, 10 do
    print(i)
end
