crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_function_declaration.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
local function greet(name)
    return ("Hello, " .. name)
end
