crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_string_literals.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
local simple = "hello"
local withEscape = "hello \"world\""
local withBackslash = "path\\to\\file"
