crates/luanext-core/src/codegen/snapshots/luanext_core__codegen__tests__snapshot_variable_declarations.snap
---
source: crates/luanext-core/src/codegen/mod.rs
expression: output
---
local x = 42
let
y = "hello"
local z = true
